<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_header_height"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settingsProfileImage"
            style="@style/circle_avatar_style"
            android:src="@drawable/default_avatar"
            app:civ_border_width="@dimen/zero_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settingsFullName"
            style="@style/user_fullname_textview_style"
            app:layout_constraintBottom_toTopOf="@+id/activeStatus"
            app:layout_constraintLeft_toRightOf="@+id/settingsProfileImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/settings_default_username_text" />

        <TextView
            android:id="@+id/activeStatus"
            style="@style/user_status_textview_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settingsProfileImage"
            app:layout_constraintTop_toBottomOf="@+id/settingsFullName"
            tools:text="@string/settings_default_active_status" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_info_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_header_block">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/profile_info_block">

            <TextView
                android:id="@+id/settings_account_label"
                style="@style/settings_header_text_style"
                android:text="@string/setting_account_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_phone_tile"
            style="@style/settings_user_data_list_tile_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_header_text">

            <TextView
                android:id="@+id/settings_phone_text"
                style="@style/settings_tile_text_style"
                app:layout_constraintBottom_toTopOf="@+id/settings_phone_helper_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/settings_default_phone_number" />

            <TextView
                android:id="@+id/settings_phone_helper_text"
                style="@style/settings_helper_text_style"
                android:text="@string/settings_phone_helper_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/settings_phone_text"
                app:layout_constraintTop_toBottomOf="@+id/settings_phone_text" />

            <View
                style="@style/separator"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_username_tile"
            style="@style/settings_user_data_list_tile_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_tile">

            <TextView
                android:id="@+id/settings_username_text"
                style="@style/settings_tile_text_style"
                app:layout_constraintBottom_toTopOf="@+id/settings_username_helper_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/settings_default_username_text" />

            <TextView
                android:id="@+id/settings_username_helper_text"
                style="@style/settings_helper_text_style"
                android:text="@string/settings_username_helper_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/settings_username_text"
                app:layout_constraintTop_toBottomOf="@+id/settings_username_text" />

            <View
                style="@style/separator"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_bio_tile"
            style="@style/settings_user_data_list_tile_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_username_tile">

            <TextView
                android:id="@+id/settings_bio_text"
                style="@style/settings_tile_text_style"
                app:layout_constraintBottom_toTopOf="@+id/settings_bio_helper_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/settings_default_bio_text" />

            <TextView
                android:id="@+id/settings_bio_helper_text"
                style="@style/settings_helper_text_style"
                android:text="@string/settings_bio_helper_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/settings_bio_text"
                app:layout_constraintTop_toBottomOf="@+id/settings_bio_text" />

            <View
                style="@style/separator"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settings_edit_photo_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/settings_change_photo_fab_cd"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        android:tint="@color/colorPrimary"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_block"
        app:rippleColor="@color/colorAccentDark" />
</androidx.constraintlayout.widget.ConstraintLayout>