<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.single_chat.SingleChatFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/expand"
        android:layout_marginHorizontal="@dimen/small_horizontal_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/input_message_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/message_item" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loader_animation"
        android:layout_width="@dimen/loader_animation_size"
        android:layout_height="@dimen/loader_animation_size"
        android:src="@drawable/app_loader_animation"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/no_messages_message"
            style="@style/normal_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxWidth="300dp"
            android:text="@string/no_messages_message"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_message_container"
        android:layout_width="@dimen/expand"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/input_message_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/input_message"
            android:layout_width="@dimen/expand"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_horizontal_margin"
            android:background="@color/transparent"
            android:hint="@string/input_message_hint"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorFadedText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/send_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/send_button"
            android:layout_width="@dimen/send_icon_size"
            android:layout_height="@dimen/send_icon_size"
            android:contentDescription="@string/send_message_button_cd"
            android:src="@android:drawable/ic_menu_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/colorAccentDark" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>